# tiago_arm_effort_controller

./: CMakeLists.txt  INIT_INSTRUCTIONS.md  README.md  package.xml  tiago_arm_effort_controller_plugins.xml
config/: rrbot_gravity_compensation.yaml  tiago_pal-gripper_gravity_compensation.yaml  tiago_pal-gripper_gravity_compensation_simulation.yaml  tiago_pal-hey5_gravity_compensation.yaml  tiago_pal-hey5_gravity_compensation_simulation.yaml  tiago_schunk-wsg_gravity_compensation.yaml  tiago_schunk-wsg_gravity_compensation_simulation.yaml
include/: controller.hpp  ros_color_stream.h
launch/: tiago_arm_effort_controller.launch
misc/: assimp-utils_4.1.0~dfsg-3_amd64.deb  robotpkg-pinocchio_2.6.8_amd64.deb  scriptCreateURDF.sh  scriptInstallDependancies.sh  scriptInstallEigenpy.sh  tiago_simulation.rviz
msg/: EofPose.msg  Print.msg  Teleop.msg  TorqueCmd.msg
scripts/: teleop_tiago_arm_effort_controller.py
src/: controller.cpp  controller_old.cpp  example.cpp
urdf/: robot_description.urdf  tiagoSteel.urdf
